--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Remotify",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A flexible open source remote office for remote workers ",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
