--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react-helmet": "^5.2.1",
 		"react-image": "^2.1.3",
 		"react-kawaii": "^0.14.4",
+		"react-pose": "^4.0.8",
 		"semantic-ui-react": "^0.87.2",
 		"styled-components": "^4.3.1",
 		"styled-flex-component": "^3.0.0"
@@ -29,7 +30,9 @@
 		"gatsby-plugin-styled-components": "^3.0.7",
 		"prettier": "^1.18.2"
 	},
-	"keywords": ["gatsby"],
+	"keywords": [
+		"gatsby"
+	],
 	"license": "MIT",
 	"scripts": {
 		"build": "gatsby build",
