--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-bootstrap": "^1.0.0-beta.9",
 		"react-dom": "^16.8.6",
 		"react-helmet": "^5.2.1",
+		"react-icons": "^3.7.0",
 		"react-image": "^2.1.3",
 		"react-kawaii": "^0.14.4",
 		"react-pose": "^4.0.8",
