--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"version": "0.1.0",
 	"author": "Kyle Mathews <mathews.kyle@gmail.com>",
 	"dependencies": {
+		"formik": "^1.5.8",
 		"gatsby": "^2.9.4",
 		"gatsby-image": "^2.1.4",
 		"gatsby-plugin-manifest": "^2.1.1",
