--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
 	"version": "0.1.0",
 	"author": "Kyle Mathews <mathews.kyle@gmail.com>",
 	"dependencies": {
+		"apollo-cache-inmemory": "^1.6.2",
+		"apollo-client": "^2.6.3",
+		"apollo-link": "^1.2.12",
+		"apollo-link-error": "^1.1.11",
+		"apollo-link-http": "^1.5.15",
 		"formik": "^1.5.8",
 		"gatsby": "^2.9.4",
 		"gatsby-image": "^2.1.4",
@@ -14,8 +19,10 @@
 		"gatsby-plugin-sharp": "^2.1.5",
 		"gatsby-source-filesystem": "^2.0.39",
 		"gatsby-transformer-sharp": "^2.1.21",
+		"graphql-tag": "^2.10.1",
 		"prop-types": "^15.7.2",
 		"react": "^16.8.6",
+		"react-apollo": "^2.5.8",
 		"react-bootstrap": "^1.0.0-beta.9",
 		"react-dom": "^16.8.6",
 		"react-helmet": "^5.2.1",
