--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"private": true,
 	"description": "A flexible open source remote office for remote workers ",
 	"version": "0.1.0",
-	"author": "Kyle Mathews <mathews.kyle@gmail.com>",
+	"author": "Nwani Victory",
 	"dependencies": {
 		"apollo-cache-inmemory": "^1.6.2",
 		"apollo-client": "^2.6.3",
@@ -20,6 +20,7 @@
 		"gatsby-source-filesystem": "^2.0.39",
 		"gatsby-transformer-sharp": "^2.1.21",
 		"graphql-tag": "^2.10.1",
+		"isomorphic-fetch": "^2.2.1",
 		"prop-types": "^15.7.2",
 		"react": "^16.8.6",
 		"react-apollo": "^2.5.8",
