--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"react-pose": "^4.0.8",
 		"semantic-ui-react": "^0.87.2",
 		"styled-components": "^4.3.1",
-		"styled-flex-component": "^3.0.0"
+		"styled-flex-component": "^3.0.0",
+		"yup": "^0.27.0"
 	},
 	"devDependencies": {
 		"babel-plugin-styled-components": "^1.10.1",
