--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 		"gatsby-transformer-sharp": "^2.1.21",
 		"graphql-tag": "^2.10.1",
 		"isomorphic-fetch": "^2.2.1",
+		"mobx": "^5.13.0",
+		"mobx-react": "^6.1.3",
+		"mobx-react-devtools": "^6.1.1",
 		"prop-types": "^15.7.2",
 		"react": "^16.8.6",
 		"react-apollo": "^2.5.8",
