--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"apollo-link-http": "^1.5.15",
 		"formik": "^1.5.8",
 		"gatsby": "^2.9.4",
+		"gatsby-cli": "^2.7.41",
 		"gatsby-image": "^2.1.4",
 		"gatsby-plugin-manifest": "^2.1.1",
 		"gatsby-plugin-offline": "^2.1.3",
