--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
 	"version": "0.1.0",
 	"author": "Nwani Victory",
 	"dependencies": {
+		"@tensorflow/tfjs": "^1.2.9",
 		"apollo-cache-inmemory": "^1.6.2",
 		"apollo-client": "^2.6.3",
 		"apollo-link": "^1.2.12",
 		"apollo-link-error": "^1.1.11",
 		"apollo-link-http": "^1.5.15",
+		"d3": "^5.12.0",
 		"formik": "^1.5.8",
 		"gatsby": "^2.9.4",
 		"gatsby-cli": "^2.7.41",
@@ -25,6 +27,7 @@
 		"mobx": "^5.13.0",
 		"mobx-react": "^6.1.3",
 		"mobx-react-devtools": "^6.1.1",
+		"moment": "^2.24.0",
 		"prop-types": "^15.7.2",
 		"react": "^16.8.6",
 		"react-apollo": "^2.5.8",
@@ -38,6 +41,7 @@
 		"semantic-ui-react": "^0.87.2",
 		"styled-components": "^4.3.1",
 		"styled-flex-component": "^3.0.0",
+		"styled-media-query": "^2.1.2",
 		"yup": "^0.27.0"
 	},
 	"devDependencies": {
