--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"version": "0.1.0",
 	"author": "Nwani Victory",
 	"dependencies": {
+		"@apollo/react-hooks": "^3.1.2",
 		"@tensorflow/tfjs": "^1.2.9",
 		"apollo-cache-inmemory": "^1.6.2",
 		"apollo-client": "^2.6.3",
