--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 	"dependencies": {
 		"@apollo/react-hooks": "^3.1.2",
 		"@tensorflow/tfjs": "^1.2.9",
+		"@types/node": "^12.7.12",
+		"@types/react-dom": "^16.9.1",
 		"apollo-cache-inmemory": "^1.6.2",
 		"apollo-client": "^2.6.3",
 		"apollo-link": "^1.2.12",
@@ -21,6 +23,8 @@
 		"gatsby-plugin-offline": "^2.1.3",
 		"gatsby-plugin-react-helmet": "^3.0.12",
 		"gatsby-plugin-sharp": "^2.1.5",
+		"gatsby-plugin-tslint": "^0.0.2",
+		"gatsby-plugin-typescript": "^2.1.12",
 		"gatsby-source-filesystem": "^2.0.39",
 		"gatsby-transformer-sharp": "^2.1.21",
 		"graphql-tag": "^2.10.1",
@@ -45,9 +49,16 @@
 		"yup": "^0.27.0"
 	},
 	"devDependencies": {
+		"@types/react": "^16.9.5",
 		"babel-plugin-styled-components": "^1.10.1",
 		"gatsby-plugin-styled-components": "^3.0.7",
-		"prettier": "^1.18.2"
+		"prettier": "^1.18.2",
+		"tslint": "^5.20.0",
+		"tslint-config-prettier": "^1.18.0",
+		"tslint-loader": "^3.5.4",
+		"tslint-plugin-prettier": "^2.0.1",
+		"tslint-react": "^4.1.0",
+		"typescript": "^3.6.4"
 	},
 	"keywords": [
 		"gatsby"
