--- a/package.json
+++ b/package.json
@@ -1,82 +1,87 @@
 {
-	"name": "Remotify",
-	"private": true,
-	"description": "A flexible open source remote office for remote workers ",
-	"version": "0.1.0",
-	"author": "Nwani Victory",
-	"dependencies": {
-		"@apollo/react-hooks": "^3.1.2",
-		"@tensorflow/tfjs": "^1.2.9",
-		"@types/node": "^12.7.12",
-		"@types/react-dom": "^16.9.1",
-		"apollo-cache-inmemory": "^1.6.2",
-		"apollo-client": "^2.6.3",
-		"apollo-link": "^1.2.12",
-		"apollo-link-error": "^1.1.11",
-		"apollo-link-http": "^1.5.15",
-		"d3": "^5.12.0",
-		"formik": "^1.5.8",
-		"gatsby": "^2.9.4",
-		"gatsby-cli": "^2.7.41",
-		"gatsby-image": "^2.1.4",
-		"gatsby-plugin-manifest": "^2.1.1",
-		"gatsby-plugin-offline": "^2.1.3",
-		"gatsby-plugin-react-helmet": "^3.0.12",
-		"gatsby-plugin-sharp": "^2.1.5",
-		"gatsby-plugin-tslint": "^0.0.2",
-		"gatsby-plugin-typescript": "^2.1.12",
-		"gatsby-source-filesystem": "^2.0.39",
-		"gatsby-transformer-sharp": "^2.1.21",
-		"graphql-tag": "^2.10.1",
-		"isomorphic-fetch": "^2.2.1",
-		"mobx": "^5.13.0",
-		"mobx-react": "^6.1.3",
-		"mobx-react-devtools": "^6.1.1",
-		"moment": "^2.24.0",
-		"prop-types": "^15.7.2",
-		"react": "^16.8.6",
-		"react-apollo": "^2.5.8",
-		"react-bootstrap": "^1.0.0-beta.9",
-		"react-dom": "^16.8.6",
-		"react-helmet": "^5.2.1",
-		"react-icons": "^3.7.0",
-		"react-image": "^2.1.3",
-		"react-kawaii": "^0.14.4",
-		"react-pose": "^4.0.8",
-		"styled-components": "^4.3.1",
-		"styled-flex-component": "^3.0.0",
-		"styled-media-query": "^2.1.2",
-		"yup": "^0.27.0"
-	},
-	"devDependencies": {
-		"@types/react": "^16.9.5",
-		"babel-plugin-styled-components": "^1.10.1",
-		"gatsby-plugin-styled-components": "^3.0.7",
-		"prettier": "^1.18.2",
-		"tslint": "^5.20.0",
-		"tslint-config-prettier": "^1.18.0",
-		"tslint-loader": "^3.5.4",
-		"tslint-plugin-prettier": "^2.0.1",
-		"tslint-react": "^4.1.0",
-		"typescript": "^3.6.4"
-	},
-	"keywords": [
-		"gatsby"
-	],
-	"license": "MIT",
-	"scripts": {
-		"build": "gatsby build",
-		"develop": "gatsby develop",
-		"format": "prettier --write src/**/*.{js,jsx}",
-		"start": "npm run develop",
-		"serve": "gatsby serve",
-		"test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/gatsbyjs/gatsby-starter-default"
-	},
-	"bugs": {
-		"url": "https://github.com/gatsbyjs/gatsby/issues"
-	}
+  "name": "Remotify",
+  "private": true,
+  "description": "A flexible open source remote office for remote workers ",
+  "version": "0.1.0",
+  "author": "Nwani Victory",
+  "dependencies": {
+    "@apollo/react-hooks": "^3.1.2",
+    "@tensorflow/tfjs": "^1.2.9",
+    "@types/node": "^12.7.12",
+    "@types/react-dom": "^16.9.1",
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.3",
+    "apollo-link": "^1.2.12",
+    "apollo-link-error": "^1.1.11",
+    "apollo-link-http": "^1.5.15",
+    "d3": "^5.12.0",
+    "formik": "^1.5.8",
+    "gatsby": "^2.9.4",
+    "gatsby-cli": "^2.7.41",
+    "gatsby-image": "^2.1.4",
+    "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-offline": "^2.1.3",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sharp": "^2.1.5",
+    "gatsby-plugin-tslint": "^0.0.2",
+    "gatsby-plugin-typescript": "^2.1.12",
+    "gatsby-source-filesystem": "^2.0.39",
+    "gatsby-transformer-sharp": "^2.1.21",
+    "graphql-tag": "^2.10.1",
+    "isomorphic-fetch": "^2.2.1",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.3",
+    "mobx-react-devtools": "^6.1.1",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-apollo": "^2.5.8",
+    "react-bootstrap": "^1.0.0-beta.9",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
+    "react-image": "^2.1.3",
+    "react-kawaii": "^0.14.4",
+    "react-pose": "^4.0.8",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "styled-components": "^4.3.1",
+    "styled-flex-component": "^3.0.0",
+    "styled-media-query": "^2.1.2",
+    "yup": "^0.27.0"
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.5",
+    "babel-plugin-styled-components": "^1.10.1",
+    "gatsby-plugin-styled-components": "^3.0.7",
+    "prettier": "^1.18.2",
+    "tslint": "^5.20.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-loader": "^3.5.4",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^4.1.0",
+    "typescript": "^3.6.4"
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write src/**/*.{js,jsx}",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+  },
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  }
 }
