--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-image": "^2.1.3",
     "react-kawaii": "^0.14.4",
     "react-pose": "^4.0.8",
+    "react-responsive-carousel": "^3.1.51",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "styled-components": "^4.3.1",
