--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
 GATSBY_FUNCTION_ENDPOINT='https://us-central1-remotify-250023.cloudfunctions.net/emailFunction/?email='
+GATSBY_PRISMA_ENDPOINT='https://remotify-server-7050e23715.herokuapp.com/default/default'
