--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
+GATSBY_PRISMA_ENDPOINT='http://localhost:4000'
 GATSBY_FUNCTION_ENDPOINT='https://us-central1-remotify-250023.cloudfunctions.net/emailFunction/?email='
