--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "author": "Nwani Victory",
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.2",
+    "@apollo/react-hooks": "^3.1.3",
     "@tensorflow/tfjs": "^1.2.9",
     "@types/node": "^12.7.12",
     "@types/react-dom": "^16.9.1",
@@ -14,6 +14,7 @@
     "apollo-link": "^1.2.12",
     "apollo-link-error": "^1.1.11",
     "apollo-link-http": "^1.5.15",
+    "cookie-parser": "^1.4.4",
     "d3": "^5.12.0",
     "dotenv": "^8.2.0",
     "formik": "^1.5.8",
@@ -31,6 +32,7 @@
     "graphql-tag": "^2.10.1",
     "isomorphic-fetch": "^2.2.1",
     "mobx": "^5.13.0",
+    "mobx-persist": "^0.4.1",
     "mobx-react": "^6.1.3",
     "mobx-react-devtools": "^6.1.1",
     "moment": "^2.24.0",
